# reachy_bomi

./: .gitignore  README.md  package.xml  setup.py
config/: scenarios.yaml
launch/: bomi_bridge.launch.py  bomi_control.launch.py
reachy_bomi/: bomi_grasp.py  bomi_selection_complete.py  bomi_teleop.py  cmd_vel_publisher.py  scenarios.py  server_socket.py  socket_client.py  socket_server.py  test_teleop.py  trajectory_map_collisions.py
scripts/: export_collision_events_csv.py  extract_path.py  trajectory_map_collisions.py
worlds/: familiarization.world  final_test.world  labyrinth1.world  labyrinth2.world  mid_tests.world
