<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reachy_bomi</name>
  <version>0.0.1</version>
  <description>BoMI finger input to Reachy ROS 2 velocity bridge</description>
  <maintainer email="s6504193@studenti.unige.it">Elisa Martinenghi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
